# just-game-engine

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  _g_u_i_d_8cpp.html  _g_u_i_d_8hpp.html  _g_u_i_d_8hpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  assert_8hpp.html  assert_8hpp_source.html  base_8hpp.html  base_8hpp_source.html  base__internal_8hpp.html  base__internal_8hpp_source.html  buffers_8cpp.html  buffers_8hpp.html  buffers_8hpp_source.html  buffers__d3d_8cpp.html  buffers__d3d_8hpp.html  buffers__d3d_8hpp_source.html  buffers__ogl_8cpp.html  buffers__ogl_8hpp.html  buffers__ogl_8hpp_source.html  buffers__vlk_8cpp.html  buffers__vlk_8hpp.html  buffers__vlk_8hpp_source.html  bug.html  camera_8cpp.html  camera_8hpp.html  camera_8hpp_source.html  class_my_library_1_1_example-members.html  class_my_library_1_1_example.html  class_my_library_1_1_subclass_example-members.html  class_my_library_1_1_subclass_example.html  classes.html  classjng_1_1_camera-members.html  classjng_1_1_camera.html  classjng_1_1_direct3_d_framebuffer-members.html  (+559 more)
editor/: CMakeLists.txt
editor/source/: CMakeLists.txt  editor_camera.cpp  editor_camera.hpp  editor_context.cpp  editor_context.hpp  editor_layer.cpp  editor_layer.hpp  main.cpp
editor/source/widgets/: CMakeLists.txt  content_browser.cpp  content_browser.hpp  inspector.cpp  inspector.hpp  main_menu_bar.cpp  main_menu_bar.hpp  scene_hierarchy.cpp  scene_hierarchy.hpp  settings.cpp  settings.hpp  statistics.cpp  statistics.hpp
editor/source/windows/: CMakeLists.txt  inspector.cpp  inspector.hpp  scene_hierarchy.cpp  scene_hierarchy.hpp
engine/: CMakeLists.txt
engine/include/jng/core/: GUID.hpp  base.hpp  engine.hpp  entry_point.hpp  event.hpp  key_events.hpp  (+3 more)
engine/shaders/: basic_fragment.glsl  basic_vertex.glsl  circle_fragment.glsl  circle_vertex.glsl  line_fragment.glsl  line_vertex.glsl  quad_fragment.glsl  quad_vertex.glsl  text_fragment.glsl  text_vertex.glsl
engine/source/: CMakeLists.txt
engine/source/core/: GUID.cpp  base_internal.hpp  engine.cpp
engine/source/debug/: CMakeLists.txt  log.cpp  ogl_error_callback.hpp  profiling.cpp
engine/source/imgui/: imgui_layer.cpp  imgui_layer.hpp
engine/source/platform/: CMakeLists.txt  graphics_context.cpp  graphics_context.hpp  graphics_context_vlk.cpp  graphics_context_vlk.hpp  input.cpp  window.cpp
engine/source/renderer/: CMakeLists.txt  buffers.cpp  font.cpp  font_data.inl  framebuffer.cpp  renderer.cpp  renderer2d.cpp  renderer_api.cpp  shader.cpp  texture.cpp  vertex_array.cpp
engine/source/scene/: CMakeLists.txt  camera.cpp  components.cpp  entity.cpp  scene.cpp
engine/source/scripting/: CMakeLists.txt  lua_definitions.cpp  lua_definitions.hpp  lua_engine.cpp  lua_script.cpp
engine/source/serializers/: scene_serializer.cpp
engine/source/utilities/: CMakeLists.txt  file.cpp  file.hpp  helpers.cpp  helpers.hpp  math.cpp
samples/hello_framebuffer/: CMakeLists.txt  main.cpp
samples/hello_text/: CMakeLists.txt  main.cpp
samples/hello_triangle/: CMakeLists.txt  main.cpp
samples/sandbox/: CMakeLists.txt
samples/sandbox/source/: camera_controller.cpp  camera_controller.hpp  game_layer.cpp  game_layer.hpp  main.cpp  subtexture.cpp  subtexture.hpp
sandbox-app/: CMakeLists.txt
sandbox-app/source/: camera_controller.cpp  camera_controller.hpp  game_data.hpp  game_layer.cpp  game_layer.hpp  main.cpp  subtexture.cpp  subtexture.hpp
source/: CMakeLists.txt
source/core/: CMakeLists.txt  GUID.cpp  base_internal.hpp  engine.cpp  layer_stack.cpp
source/debug/: CMakeLists.txt  assert.hpp  log.cpp  log.hpp  profiling.cpp
source/imgui/: CMakeLists.txt  imgui_layer.cpp
source/platform/: CMakeLists.txt  graphics_context.cpp  graphics_context.hpp  graphics_context_d3d.hpp  graphics_context_impl_vlk.cpp  graphics_context_impl_vlk.hpp  graphics_context_ogl.hpp  graphics_context_vlk.cpp  input.cpp  platform.cpp  platform.hpp  window.cpp
source/platform/linux/: graphics_context_ogl.hpp
source/platform/windows/: CMakeLists.txt  error_checks_macros_win.cpp  error_checks_macros_win.hpp  graphics_context_d3d.cpp  graphics_context_d3d.hpp  graphics_context_ogl.cpp  platform_win.cpp  windows_base.hpp
source/renderer/: CMakeLists.txt  buffers.cpp  buffers.hpp  camera.cpp  framebuffer.cpp  renderer.cpp  renderer2d.cpp  renderer_api.cpp  shader.cpp  shader_sources.hpp  texture.cpp  vertex_array.cpp  vertex_array.hpp
source/renderer/direct3d/: CMakeLists.txt  buffers_d3d.cpp  buffers_d3d.hpp  buffers_impl_d3d.cpp  buffers_impl_d3d.hpp  framebuffer_d3d.cpp  framebuffer_d3d.hpp  renderer_api_d3d.cpp  renderer_api_d3d.hpp  renderer_api_impl_d3d.cpp  renderer_api_impl_d3d.hpp  shader_d3d.cpp  shader_d3d.hpp  shader_impl_d3d.cpp  shader_impl_d3d.hpp  shader_sources_d3d.cpp  texture_d3d.cpp  texture_d3d.hpp  texture_impl_d3d.cpp  texture_impl_d3d.hpp  vertex_array_d3d.cpp  vertex_array_d3d.hpp  vertex_array_impl_d3d.cpp  vertex_array_impl_d3d.hpp
source/renderer/opengl/: CMakeLists.txt  buffers_ogl.cpp  buffers_ogl.hpp  framebuffer_ogl.cpp  framebuffer_ogl.hpp  renderer_api_impl_ogl.cpp  renderer_api_impl_ogl.hpp  renderer_api_ogl.cpp  renderer_api_ogl.hpp  renderer_impl_ogl.cpp  renderer_impl_ogl.hpp  shader_impl_ogl.cpp  shader_impl_ogl.hpp  shader_ogl.cpp  shader_ogl.hpp  shader_sources_ogl.cpp  texture_impl_ogl.cpp  texture_impl_ogl.hpp  texture_ogl.cpp  texture_ogl.hpp  vertex_array_impl_ogl.cpp  vertex_array_impl_ogl.hpp  vertex_array_ogl.cpp
source/renderer/vulkan/: CMakeLists.txt  buffers_impl_vlk.cpp  buffers_impl_vlk.hpp  buffers_vlk.cpp  buffers_vlk.hpp  renderer_api_impl_vlk.cpp  renderer_api_impl_vlk.hpp  renderer_api_vlk.cpp  shader_impl_vlk.cpp  shader_impl_vlk.hpp  shader_sources_vlk.cpp  shader_vlk.cpp  shader_vlk.hpp  texture_impl_vlk.cpp  texture_impl_vlk.hpp  texture_vlk.hpp  vertex_array_impl_vlk.cpp  vertex_array_impl_vlk.hpp  vertex_array_vlk.cpp
source/scene/: CMakeLists.txt  camera.cpp  components.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp
source/serializers/: CMakeLists.txt  scene_serializer.cpp
(+865 files in other folders)
